--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
 
+
+    <button id="start">Старт</button>
+    
+    <!-- <button id="stop">Стоп</button>
+    <button id="reset">Сброс</button> -->
+
     <p id="countdown">timer</p>
     
+
     <script src="script.js"></script>
 </body>
 </html>
